website/websites/u64q/code/fibonacci.3.pyston.log

 Sun, 06 Feb 2022 21:18:13 GMT

COMMAND LINE:
 /usr/bin/pyston fibonacci.pyston-3.pyston 1000000

PROGRAM FAILED 


PROGRAM OUTPUT:

  File "fibonacci.pyston-3.pyston", line 22
    print fib(int(sys.argv[1]))
          ^
SyntaxError: invalid syntax
